Fix scrollbar hell

--- a/src/index.scss
+++ b/src/index.scss
@@ -86,6 +86,8 @@ body
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+
+	&::-webkit-scrollbar { display: none; }
 }
 
 .viewer
